# KMiniEngine

./: .gitignore  .gitmodules  CMakeLists.txt  KMiniEngine.sln  README.md
Grass Rendering/: Grass Rendering.vcxproj  Grass Rendering.vcxproj.filters
Grass Rendering/src/: Application.cpp  GrassRenderApp.cpp  GrassRenderingApp.cpp
KMiniEngine/: KMiniEngine.vcxproj  KMiniEngine.vcxproj.filters
KMiniEngine/src/: CMakeLists.txt  KMiniEngine.h  SimpleProgram.cpp  SimpleProgram.h
KMiniEngine/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.cpp  EntryPoint.h
KMiniEngine/src/Engine/Application/: Application.cpp  Application.h  Window.cpp  Window.h
KMiniEngine/src/Engine/Assets/Primitive Geometry/: StaticObject.h
KMiniEngine/src/Engine/Core/: Application.cpp  Application.h  EngineMain.h  EntryPoint.h  Layer.h
KMiniEngine/src/Engine/Debugging/ImGUI/: ImGUILayer.h
KMiniEngine/src/Engine/Renderer/: Renderer.cpp  Renderer.h
KMiniEngine/src/Engine/Renderer/Camera/: Camera.h
KMiniEngine/src/Engine/Renderer/Shader/: ShaderHandler.cpp
KMiniEngine/src/Engine/Resources/Model Loading/: Mesh.cpp
bin-int/x64-Debug/Grass Rendering/: Grass Rendering.exe.recipe
bin-int/x64-Debug/KMiniEngine/: KMiniEngine.dll.recipe
include/: KMiniEngine.h
include/Application/: Application.h  Window.h
include/Assets/Components/: Renderer2D.h  Rigidbody.h  Transform.h
include/Assets/Primitive Geometry/: StaticObject.h
include/Core/: EngineMain.h  EngineSystems.h  GameScene.h  Layer.h  Scene.h  StackSingletons.h  VoidLayer.h
include/Core/ECS/: Component.h  ComponentManager.h  ComponentPool.h  ECSManager.h  Entity.h  EntityManager.h  ISystem.h  System.h
include/Core/ECS/Components/: Component.h  ComponentBitset.h  ComponentFactory.h  Rigidbody.h  Transform.h
include/Core/ECS/SparseSet/: ISparseSet.h  SparseSet.h
include/Core/ECS/Systems/: ISystem.h  MovementSystem.h  RenderingSystem.h  System.h  SystemBase.h
include/Core/Events/: EventSystem.h  IEventListener.h
include/Debugging/ImGUI/: ImGUILayer.h
include/IO/FileSystem/: FileHandler.h
include/IO/Input/: InputKeyData.h  InputSystem.h
include/Renderer/: Renderer.h
include/Renderer/Shader/: ShaderProgram.h
include/Rendering/: RenderConfigs.h  Renderer.h
include/Rendering/Shading/: Shader.h  ShaderHandler.h  ShaderProgram.h
include/Rendering/Shading/BasicShaders/FragmentShaders/: simple.frag
include/Rendering/Shading/BasicShaders/VertexShaders/: simple.vert
include/Resources/ModelLoading/: Mesh.h  Model.h
include/Scene/: GameObject.h
include/Scene/Camera/: Camera.h
src/Application/: Application.cpp  Window.cpp
src/Core/: GameScene.cpp  Scene.cpp
src/Core/ECS/: ComponentPool.cpp  ECSManager.cpp  Entity.cpp  EntityManager.cpp  System.cpp
src/Core/ECS/Systems/: MovementSystem.cpp  RenderingSystem.cpp
src/Core/Events/: EventSystem.cpp
src/Debugging/ImGUI/: ImGUILayer.cpp
src/IO/FileSystem/: FileHandler.cpp
src/IO/Input/: InputSystem.cpp
src/Renderer/: Renderer.cpp
src/Renderer/Shader/: ShaderProgram.cpp
src/Rendering/: Renderer.cpp
src/Rendering/Shading/: Shader.cpp  ShaderHandler.cpp  ShaderProgram.cpp
src/Resources/ModelLoading/: Mesh.cpp  Model.cpp
src/Scene/: GameObject.cpp
src/Scene/Camera/: Camera.cpp
