add_library(KMiniEngine KMiniEngine.h
        Engine/Application/Application.cpp
        Engine/Application/Application.h
        Engine/Application/Window.cpp
        Engine/Application/Window.h
        Engine/Renderer/Shader/Shader.cpp
        Engine/IO/FileSystem/FileHandler.cpp
        Engine/Debugging/ImGUI/ImGUILayer.cpp
        Engine/Renderer/Shader/ShaderHandler.cpp
        Engine/IO/FileSystem/FileHandler.h
        Engine/Renderer/Shader/Shader.h
        "Engine/Assets/Primitive Geometry/StaticObject.h"
        Engine/Renderer/Shader/ShaderProgram.cpp
        Engine/Renderer/Shader/ShaderHandler.h
        Engine/Renderer/Shader/ShaderProgram.h
        Engine/Renderer/Renderer.cpp
        Engine/Renderer/Renderer.h
        Engine/Resources/ModelLoading/Mesh.cpp
        Engine/Resources/ModelLoading/Mesh.h
        Engine/Resources/ModelLoading/Model.cpp
        Engine/Resources/ModelLoading/Model.h
        Engine/Scene/Camera/Camera.cpp)
